RESOLVED FIXED311285
<select multiple> does not always fire onchange when the mouse button is released far outside the element
https://bugs.webkit.org/show_bug.cgi?id=311285
Summary <select multiple> does not always fire onchange when the mouse button is rele...
Tim Horton
Reported 2026-04-01 13:56:58 PDT
<select multiple> does not always fire onchange when the mouse button is released far outside the element
Attachments
Radar WebKit Bug Importer
Comment 1 2026-04-01 13:57:07 PDT
Tim Horton
Comment 2 2026-04-01 16:10:41 PDT
EWS
Comment 3 2026-04-02 17:39:04 PDT
Committed 310482@main (9d4d4d7df6ee): <https://commits.webkit.org/310482@main> Reviewed commits have been landed. Closing PR #61860 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.